--- a/tabcontent.css
+++ b/tabcontent.css
@@ -13,7 +13,7 @@ h3 {
     margin-bottom: 0;
     font: bold 12px Verdana;
     list-style-type: none;
-    text-align: right; /*set to left, center, or right to align the menu as desired*/
+    text-align: left; 
     }
     
     .shadetabs li{
@@ -41,17 +41,7 @@ h3 {
     color: #2d2b2b;
     }
     
-    .shadetabs li a.selected{ /*selected main tab style */
-    position: relative;
-    top: 1px;
-    }
-    
-    .shadetabs li a.selected{ /*selected main tab style */
-    background-image: url(shadeactive.gif);
-    border-bottom-color: white;
-    }
-    
-    .shadetabs li a.selected:hover{ /*selected main tab style */
+    .shadetabs li a.selected:hover{
     text-decoration: none;
     }
     
